# perception_interfaces

./: CMakeLists.txt  README.md  package.xml
msg/: BoundingBox3D.msg  BoundingBox3DHypothesis.msg  ClassType.msg  ClassTypeHypothesis.msg  Detection.msg  DetectionHypothesis.msg  DetectionStatus.msg  FusedDetection.msg  FusedPerceptionEvent.msg  GroundTruthDetection.msg  GroundTruthPerception.msg  Obstacle.msg  ObstacleArray.msg  PerceptionEvent.msg  PredictedTrajectory.msg  PredictedTrajectoryState.msg  VelocityHypothesis.msg
